--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+     <%= render partial: 'shared/header_menu' %>
       <%= yield %>
-    </main>
   </body>
 </html>
