--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -1,6 +1,8 @@
 <header class="flex justify-between items-center bg-gray-900 p-4">
   <div class="flex flex-shrink-0 items-center">
-    <%= image_tag 'stockoutlet_logo_v3.png', class: 'h-12 w-auto', alt: 'Your Company' %>
+    <%= link_to root_path do %>
+      <%= image_tag 'stockoutlet_logo_v3.png', class: 'h-12 w-auto', alt: 'Your Company' %>
+    <% end %>
   </div>
  <div class="flex-1 flex justify-center">
     <div class="relative w-2/4 flex">
@@ -24,13 +26,13 @@
             </svg>
           </button>
         </div>
-        <div class="origin-top-left absolute left-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+        <%# <div class="origin-top-left absolute left-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
           <div class="py-1" role="none">
             <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">Category 1</a>
             <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-1">Category 2</a>
             <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-2">Category 3</a>
           </div>
-        </div>
+        </div> %>
       </div>
     </div>
   </div>
@@ -55,19 +57,18 @@
           From: "transform opacity-100 scale-100"
           To: "transform opacity-0 scale-95"
       -->
-      <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button">
+      <%# <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button">
         <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Your Profile</a>
         <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Settings</a>
         <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Sign out</a>
-      </div>
+      </div> %>
     </div>
   </div>
 </header>
  <p class="flex h-10 items-center justify-center bg-gradient-to-r from-[#ff80b5] to-[#9089fc] opacity-30 px-4 text-sm font-semibold text-white sm:px-6 lg:px-8">Get free delivery on orders over $100</p>
 <nav aria-label="Global" class="flex justify-center space-x-4 mt-4">
-  <a href="#" aria-current="page" class="text-white bg-gray-900 px-3 py-2 rounded-md text-sm font-medium">Dashboard</a>
-  <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Team</a>
-  <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Projects</a>
-  <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Calendar</a>
+  <% @main_categories.each do |category| %>
+    <a href="<%= category_path(category) %>" aria-current="page" class="px-3 py-2 rounded-md text-lg font-semibold text-gray-800"><%= category.name %></a>
+  <% end %>
 </nav>
 
