--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,93 @@
-<div>
-  <h1 class="font-bold text-4xl">Products#show</h1>
-  <p>Find me in app/views/products/show.html.erb</p>
+<div class="bg-white">
+  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+     <%= render partial: 'shared/breadcrumb' %>
+
+
+    <div class="grid grid-cols-1 gap-y-8 gap-x-8 lg:grid-cols-2 lg:gap-x-16">
+      <!-- Product info -->
+      <div class="flex flex-col justify-between px-4 sm:px-6 lg:px-8">
+        <div class="lg:border-r lg:border-gray-200 lg:pr-4">
+          <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl"><%= @product.name %></h1>
+          <p class="text-2xl tracking-tight text-gray-900"><%= number_to_currency(@product.price) %></p>
+          <div class="mt-4">
+            <div class="flex items-center">
+              <div class="flex items-center">
+                <svg class="h-5 w-5 flex-shrink-0 text-yellow-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+                </svg>
+                <svg class="h-5 w-5 flex-shrink-0 text-yellow-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+                </svg>
+                <svg class="h-5 w-5 flex-shrink-0 text-yellow-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+                </svg>
+                <svg class="h-5 w-5 flex-shrink-0 text-yellow-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+                </svg>
+                <svg class="h-5 w-5 flex-shrink-0 text-gray-200" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+                </svg>
+              </div>
+              <p class="sr-only">4 out of 5 stars</p>
+              <a href="#" class="ml-3 text-sm font-medium text-indigo-600 hover:text-indigo-500">1624 reviews</a>
+            </div>
+          </div>
+
+          <!-- Product description -->
+          <div class="mt-6">
+            <p class="text-base text-gray-900"><%= @product.description %></p>
+          </div>
+
+          <div class="flex items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="h-6 w-6 text-green-500">
+              <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd"></path>
+            </svg>
+            <p class="ml-2 mt-6 text-sm text-gray-500">In stock and ready to ship</p>
+          </div>
+
+          <!-- Size options -->
+          <div class="mt-10">
+            <h3 class="text-sm font-medium text-gray-900">Size</h3>
+            <fieldset class="mt-4">
+              <div class="flex space-x-4">
+                <label class="block">
+                  <input type="radio" name="size-choice" value="18L" class="sr-only" checked>
+                  <div class="px-4 py-2 border border-indigo-500 rounded-lg cursor-pointer">
+                    <p class="text-base font-medium text-gray-900">18L</p>
+                    <p class="text-sm text-gray-500">Perfect for a reasonable amount of snacks.</p>
+                  </div>
+                </label>
+                <label class="block">
+                  <input type="radio" name="size-choice" value="20L" class="sr-only">
+                  <div class="px-4 py-2 border border-gray-300 rounded-lg cursor-pointer">
+                    <p class="text-base font-medium text-gray-900">20L</p>
+                    <p class="text-sm text-gray-500">Enough room for a serious amount of snacks.</p>
+                  </div>
+                </label>
+              </div>
+            </fieldset>
+            <a href="#" class="mt-3 block text-sm font-medium text-indigo-600 hover:text-indigo-500">What size should I buy?</a>
+          </div>
+
+          <button type="submit" class="mt-10 w-full flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Add to bag</button>
+
+          <div class="mt-4">
+            <a href="#" class="flex items-center text-sm font-medium text-gray-900">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="h-5 w-5 text-gray-500 mr-2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75m-3-7.036A11.959 11.959 0 013.598 6 11.99 11.99 0 003 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285z"></path>
+              </svg>
+              Lifetime Guarantee
+            </a>
+          </div>
+
+          
+        </div>
+      </div>
+
+      <!-- Product image -->
+      <div class="flex justify-center items-center px-4 sm:px-6 lg:px-8">
+        <img src="<%= @product.product_image %>" alt="Model wearing light green backpack with black canvas straps and front zipper pouch." class="w-full max-w-2xl">
+      </div>
+    </div>
+  </div>
 </div>
