--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -4,8 +4,8 @@
       <%= image_tag 'stockoutlet_logo_v3.png', class: 'h-12 w-auto', alt: 'Your Company' %>
     <% end %>
   </div>
- <div class="flex-1 flex justify-center">
-    <div class="relative w-2/4 flex">
+  <div class="flex-1 flex justify-center">
+    <form action="<%= search_results_path %>" method="get" class="relative w-2/4 flex" id="search-form">
       <div class="relative flex-1">
         <label for="search" class="sr-only">Search</label>
         <div class="relative">
@@ -14,27 +14,18 @@
               <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"></path>
             </svg>
           </div>
-          <input id="search" name="search" type="search" placeholder="Search" class="block w-full pl-10 pr-3 py-2 border border-gray-300  bg-gray-800 text-gray-300 placeholder-gray-400 focus:outline-none focus:bg-white focus:text-gray-900 sm:text-sm">
+          <input id="search" name="search" type="search" placeholder="Search" value="<%= params[:search] %>" class="block w-full pl-10 pr-3 py-2 border border-gray-300 bg-gray-800 text-gray-300 placeholder-gray-400 focus:outline-none focus:bg-white focus:text-gray-900 sm:text-sm">
         </div>
       </div>
       <div class="relative inline-block text-left">
-        <div>
-          <button type="button" class="inline-flex justify-center w-full rounded-l-md border border-gray-300 bg-gray-800 py-2 px-4 text-sm font-medium text-gray-300 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-900" id="menu-button" aria-expanded="true" aria-haspopup="true">
-            Categories
-            <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
-            </svg>
-          </button>
-        </div>
-        <%# <div class="origin-top-left absolute left-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
-          <div class="py-1" role="none">
-            <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0">Category 1</a>
-            <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-1">Category 2</a>
-            <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-2">Category 3</a>
-          </div>
-        </div> %>
+        <select name="category" id="category" class="inline-flex justify-center w-full border border-gray-300 bg-gray-800 py-2 px-8 text-sm font-medium text-gray-300 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-900" onchange="this.form.submit();">
+          <option value="" <%= 'selected' if params[:category].blank? %>>All Categories</option>
+          <% Category.where(sub_category_id: nil).each do |category| %>
+            <option value="<%= category.id %>" <%= 'selected' if category.id.to_s == params[:category] %>><%= category.name %></option>
+          <% end %>
+        </select>
       </div>
-    </div>
+    </form>
   </div>
   <div class="flex items-center space-x-4">
     <button class="relative bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
@@ -48,27 +39,17 @@
         <span class="sr-only">Open user menu</span>
         <img alt="" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=2&amp;w=256&amp;h=256&amp;q=80" class="h-8 w-8 rounded-full">
       </button>
-      <!--
-        Dropdown menu, show/hide based on menu state.
-        Entering: "transition ease-out duration-100"
-          From: "transform opacity-0 scale-95"
-          To: "transform opacity-100 scale-100"
-        Leaving: "transition ease-in duration-75"
-          From: "transform opacity-100 scale-100"
-          To: "transform opacity-0 scale-95"
-      -->
-      <%# <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button">
-        <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Your Profile</a>
-        <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Settings</a>
-        <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Sign out</a>
-      </div> %>
     </div>
   </div>
 </header>
- <p class="flex h-10 items-center justify-center bg-gradient-to-r from-[#ff80b5] to-[#9089fc] opacity-30 px-4 text-sm font-semibold text-white sm:px-6 lg:px-8">Get free delivery on orders over $100</p>
+
+
+
+
+<p class="flex h-10 items-center justify-center bg-gradient-to-r from-[#ff80b5] to-[#9089fc] opacity-30 px-4 text-sm font-semibold text-white sm:px-6 lg:px-8">Get free delivery on orders over $100</p>
 <nav aria-label="Global" class="flex justify-center space-x-4 mt-4">
   <% @main_categories.each do |category| %>
-    <a href="<%= category_path(category) %>" aria-current="page" class="px-3 py-2 rounded-md text-lg font-semibold text-gray-800"><%= category.name %></a>
+    <a href="<%= category_path(category) %>" aria-current="page" class="px-3 py-2 rounded-md text-2xl font-semibold text-gray-800"><%= category.name %></a>
   <% end %>
 </nav>
 
