added shopping cart add and edit functionality

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,7 +5,7 @@
       <!-- Subcategories Section -->
       <div class="lg:col-span-1">
         <form class="md dai">
-          <h3 class="text-lg font-bold text-gray-900"><%= @category.name %> Brands</h3>
+          <h3 class="text-lg font-bold text-gray-900 mb-6"><%= @category.name %> Brands</h3>
           <ul role="list" class="space-y-4">
             <% @category.sub_categories.each do |sub_category| %>
               <li>
