--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,7 +32,7 @@
         </div>
       </div>
     <% end %>
-    <div class="mt-10">
+    <div class="mt-20">
       <h1 class="text-2xl font-bold">Browse Products</h1>
       <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
         <% @all_products.each do |product| %>
@@ -45,9 +45,11 @@
           </a>
         <% end %>
       </div>
-      <div class="mt-8">
-        <%= paginate @all_products %>
+      <div class="mt-10">
+        <%= render 'kaminari/paginator', paginator: @all_products %>
       </div>
+
+      
     </div>
   </div>
 </div>
