--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -14,11 +14,11 @@
               <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"></path>
             </svg>
           </div>
-          <input id="search" name="search" type="search" placeholder="Search" value="<%= params[:search] %>" class="block w-full pl-10 pr-3 py-2 border border-gray-300 bg-gray-800 text-gray-300 placeholder-gray-400 focus:outline-none focus:bg-white focus:text-gray-900 sm:text-sm">
+          <input id="search" name="search" type="search" placeholder="Search" value="<%= params[:search] %>" class="block w-full pl-10 pr-3 py-2 border border-gray-300 bg-gray-800 text-gray-300 placeholder-gray-400 focus:outline-none focus:bg-white focus:text-gray-900 sm:text-lg">
         </div>
       </div>
       <div class="relative inline-block text-left">
-        <select name="category" id="category" class="inline-flex justify-center w-full border border-gray-300 bg-gray-800 py-2 px-8 text-sm font-medium text-gray-300 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-900" onchange="this.form.submit();">
+        <select name="category" id="category" class="inline-flex justify-center w-full border border-gray-300 bg-gray-800 py-2 px-8 text-lg font-medium text-gray-300 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-900" onchange="this.form.submit();">
           <option value="" <%= 'selected' if params[:category].blank? %>>All Categories</option>
           <% Category.where(sub_category_id: nil).each do |category| %>
             <option value="<%= category.id %>" <%= 'selected' if category.id.to_s == params[:category] %>><%= category.name %></option>
@@ -28,23 +28,24 @@
     </form>
   </div>
   <div class="flex items-center space-x-4">
-    <button class="relative bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-      <span class="sr-only">View notifications</span>
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="h-6 w-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0"></path>
-      </svg>
-    </button>
+    <!-- Cart -->
+    <div class="ml-4 flow-root lg:ml-6">
+      <%= link_to cart_path, class: "group -m-2 flex items-center p-2" do %>
+        <svg class="h-6 w-6 flex-shrink-0 text-gray-400 group-hover:text-gray-500" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+        </svg>
+        <span class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800">0</span>
+        <span class="sr-only">items in cart, view bag</span>
+      <% end %>
+    </div>
     <div class="relative">
       <button class="flex items-center text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
         <span class="sr-only">Open user menu</span>
-        <img alt="" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=2&amp;w=256&amp;h=256&amp;q=80" class="h-8 w-8 rounded-full">
+        <img alt="" src="https://thumbs.dreamstime.com/b/isolated-cute-happy-cat-emoji-vector-illustration-225027901.jpg" class="h-8 w-8 rounded-full">
       </button>
     </div>
   </div>
 </header>
-
-
-
 
 <p class="flex h-10 items-center justify-center bg-gradient-to-r from-[#ff80b5] to-[#9089fc] opacity-30 px-4 text-sm font-semibold text-white sm:px-6 lg:px-8">Get free delivery on orders over $100</p>
 <nav aria-label="Global" class="flex justify-center space-x-4 mt-4">
