--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -45,11 +45,10 @@
           </a>
         <% end %>
       </div>
-      <div class="mt-10">
-        <%= render 'kaminari/paginator', paginator: @all_products %>
+      <div class="mt-8 flex flex-col items-center">
+        <hr class="w-full border-gray-300 mb-4">
+        <%= paginate @all_products%>
       </div>
-
-      
     </div>
   </div>
 </div>
