--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
-
 <div class="bg-white">
+  <%= render partial: 'shared/categories_menu' %>
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:max-w-none lg:py-32">
       <h2 class="text-2xl font-bold text-gray-900">Collections</h2>
