--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,6 @@
 
 <div class="bg-white">
+  <%= render partial: 'shared/categories_menu' %>
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="grid grid-cols-1 lg:grid-cols-4 gap-8 py-16 sm:py-24 lg:py-32">
       <!-- Subcategories Section -->
