--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,5 @@
 <div class="bg-white">
+  <%= render partial: 'shared/categories_menu' %>
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
     <h1 class="text-2xl font-bold">Recommended For You</h1>
     <nav aria-label="Tabs" >
