--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,5 @@
 <div class="bg-white">
+  <%= render partial: 'shared/categories_menu' %>
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
     <%= render partial: 'shared/breadcrumb' %>
     <div class="grid grid-cols-1 gap-y-8 gap-x-8 lg:grid-cols-2 lg:gap-x-16">
