--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,19 +40,18 @@
       </div>
 
       <div>
-        <%= f.label :province, class: "block text-sm font-medium leading-6 text-gray-900" %>
+        <%= f.label :province_id, "Province", class: "block text-sm font-medium leading-6 text-gray-900" %>
         <div class="mt-2">
           <%= f.collection_select :province_id, Province.all, :id, :name, prompt: "Select your province", required: true, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
         </div>
       </div>
 
-  <div class="field">
-    <%= f.fields_for :customer_addresses do |address_form| %>
-      <%= address_form.label :address %><br />
-      <%= address_form.text_field :address %>
-    <% end %>
-  </div>
-
+      <div>
+        <%= f.label :address, class: "block text-sm font-medium leading-6 text-gray-900" %>
+        <div class="mt-2">
+          <%= f.text_field :address, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+        </div>
+      </div>
 
       <div>
         <%= f.submit "Sign up", class: "flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
