--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -34,25 +34,22 @@
         <%= link_to 'About', page_path('about'), class: 'rounded-md px-3 py-2 text-lg font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
       </div>
     </div>
+    
     <!-- Cart -->
     <div class="ml-4 flow-root lg:ml-6">
-      <%= link_to cart_path, class: "group -m-2 flex items-center p-2" do %>
-        <svg class="h-6 w-6 flex-shrink-0 text-gray-400 group-hover:text-gray-500" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-        </svg>
-        <span class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800">0</span>
-        <span class="sr-only">items in cart, view bag</span>
+      <%= link_to cart_path(@current_cart.secret_id), class: "group -m-2 flex items-center p-2" do %>
+        <%= render partial: 'layouts/cart', locals: { cart: @current_cart } %>
       <% end %>
     </div>
     <!-- Profile dropdown -->
-<div class="relative ml-3">
-  <div>
-    <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-      <span class="absolute -inset-1.5"></span>
-      <span class="sr-only">Open user menu</span>
-      <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-    </button>
-  </div>
+    <div class="relative ml-3">
+    <div>
+      <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+        <span class="absolute -inset-1.5"></span>
+        <span class="sr-only">Open user menu</span>
+        <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+      </button>
+    </div>
 
   <!-- Dropdown menu -->
   <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 hidden opacity-0 transform scale-95 transition-all duration-200 ease-in-out" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
