--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
   <%= render partial: 'shared/categories_menu' %>
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
     <h1 class="text-2xl font-bold">Recommended For You</h1>
-    <nav aria-label="Tabs" >
+    <nav aria-label="Tabs">
       <div class="flex space-x-8">
         <%= link_to products_path(filter: 'on_sale'), class: "group inline-flex items-center py-4 px-1 border-b-2 text-sm font-medium #{'text-blue-600 border-blue-600' if params[:filter] == 'on_sale' || params[:filter].blank?}" do %>
           <i class="fas fa-tags mr-2"></i>
@@ -24,7 +24,11 @@
           <% @filtered_products.each do |product| %>
             <a href="<%= product_path(product) %>" class="group">
               <div class="aspect-h-1 aspect-w-1 w-auto overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75">
-                <img src="<%= product.product_image %>" alt="image" class="h-auto w-auto object-cover object-center lg:h-auto lg:w-auto">
+                <% if product.uploaded_image.attached? %>
+                  <img src="<%= url_for(product.uploaded_image) %>" alt="<%= product.name %>" class="h-auto w-auto object-cover object-center lg:h-auto lg:w-auto">
+                <% else %>
+                  <img src="<%= product.product_image %>" alt="<%= product.name %>" class="h-auto w-auto object-cover object-center lg:h-auto lg:w-auto">
+                <% end %>
               </div>
               <h3 class="mt-4 text-sm text-gray-700"><%= product.name %></h3>
               <p class="mt-1 text-lg font-medium text-gray-900">CA$<%= product.price %></p>
@@ -39,7 +43,11 @@
         <% @all_products.each do |product| %>
           <a href="<%= product_path(product) %>" class="group">
             <div class="aspect-h-1 aspect-w-1 w-auto overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75">
-              <img src="<%= product.product_image %>" alt="image" class="h-auto w-auto object-cover object-center lg:h-auto lg:w-auto">
+              <% if product.uploaded_image.attached? %>
+                <img src="<%= url_for(product.uploaded_image) %>" alt="<%= product.name %>" class="h-auto w-auto object-cover object-center lg:h-auto lg:w-auto">
+              <% else %>
+                <img src="<%= product.product_image %>" alt="<%= product.name %>" class="h-auto w-auto object-cover object-center lg:h-auto lg:w-auto">
+              <% end %>
             </div>
             <h3 class="mt-4 text-sm text-gray-700"><%= product.name %></h3>
             <p class="mt-1 text-lg font-medium text-gray-900">CA$<%= product.price %></p>
@@ -48,7 +56,7 @@
       </div>
       <div class="mt-8 flex flex-col items-center">
         <hr class="w-full border-gray-300 mb-4">
-        <%= paginate @all_products%>
+        <%= paginate @all_products %>
       </div>
     </div>
   </div>
